namespace VRShooting.Scripts.Player
{
    public interface IPlayerShootTrigger
    {
        // PlayerShootTriggerに対して依存するクラスはいないので空でおけ
    }
}
